traversal.snake.Snake.scala.error
Compilation error:
Snake:11: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()) {
    ^Snake:16: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()) {
    ^